
The speech-enabler for Emacs widgets has been completely
overhauled.
This results in better speech-enabling of packages like
custom and JDE.

** URL Templates 


New URL templates for Sourceforge, DDJ TechNetCast etc.

** Speech-enables ERC:

Enhanced with room monitors and the ability to hear things
said by specific people.

**Speech-enables ansi-color.el

Module ansi-color (bundled with Emacs 21)
colorizes process output according to ansi escape
sequences. Emacspeak 
maps these colors to appropriate ACSS style settings to
provide audio formatted output.

** Speech-enables MetaPost Mode:

metapost mode helps authoring and maintaining metapost
drawings.

** Convenience Commands:

All Emacspeak convenience commands have been moved to module
emacspeak-wizards.

*** Simple phone book:

See command  emacspeak-speak-telephone-directory for a
simple phone book.

*** W3 url rewrite wizard:

There is a new command emacspeak-w3-url-rewrite-and-follow
bound to "y" in W3 buffers. This is useful in applying a URL
rewrite rule to the link under point before opening it.
This is most useful in jumping directly to printer friendly
versions of articles at popular sites like Yahoo and CNN.

*** Midi Icons:

Command emacspeak-toggle-midi-icons has been nuked.
In its place, key C-e M-a runs command 
emacspeak-set-auditory-icon-player which can be used to
interactively select the kind of auditory icons used.

** Key Bindings:

*** Personal keys:

 There is a new keymap emacspeak-personal-keymap
for user's personal keybindings --and available through
prefix key C-e x
To bind a command you would write 
(define-key emacspeak-personal-keymap "a"
'emacspeak-speak-other-window)
Alternatively, use the customize interface and customize
variable
emacspeak-personal-keys.

To accomodate this change, command emacspeak-view-register
is moved to C-e v
and command emacspeak-speak-version is moved to C-e V


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end:
